tests/baselines/reference/accessorsInAmbientContext.errors.txt
accessorsInAmbientContext.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
accessorsInAmbientContext.ts(3,17): error TS1183: An implementation cannot be declared in ambient contexts.
accessorsInAmbientContext.ts(4,18): error TS1183: An implementation cannot be declared in ambient contexts.
accessorsInAmbientContext.ts(6,24): error TS1183: An implementation cannot be declared in ambient contexts.
accessorsInAmbientContext.ts(7,25): error TS1183: An implementation cannot be declared in ambient contexts.
accessorsInAmbientContext.ts(12,13): error TS1183: An implementation cannot be declared in ambient contexts.
accessorsInAmbientContext.ts(13,14): error TS1183: An implementation cannot be declared in ambient contexts.
accessorsInAmbientContext.ts(15,20): error TS1183: An implementation cannot be declared in ambient contexts.
accessorsInAmbientContext.ts(16,21): error TS1183: An implementation cannot be declared in ambient contexts.


==== accessorsInAmbientContext.ts (9 errors) ====
    declare module M {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class C {
            get X() { return 1; }
                    ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            set X(v) { }
                     ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
    
            static get Y() { return 1; }
                           ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            static set Y(v) { }
                            ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        }
    }
    
    declare class C {
        get X() { return 1; }
                ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        set X(v) { }
                 ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
    
        static get Y() { return 1; }
                       ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        static set Y(v) { }
                        ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
    }